[tool.poetry]
name = "khazad"
version = "0.1.0"
description = ""
authors = ["Isaac Ronan <isaacronan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
